feat: Implementa o endpoint responsável por listar todas as vendas ativas
