# routes/api.php
@@ -7,4 +7,5 @@ use App\Http\Controllers\SaleController;
 
 Route::get('/products', [ProductController::class, 'list']);
 
+Route::get('/sales', [SaleController::class, 'list']);
 Route::post('/sale', [SaleController::class, 'store']);
